[package]
name = "lzw-tiff-decoder"
version = "0.1.0"
authors = [
    "Trevor Manz <trevor.j.manz@gmail.com>",
    "Kyle Barron <kyle@developmentseed.org>",
]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["lol_alloc"]
debug = ["dep:console_error_panic_hook"]
lol_alloc = ["dep:lol_alloc"]

[dependencies]
weezl = { version = "0.1.0", features = ["alloc"], default-features = false }
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

lol_alloc = { version = "0.4.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
